unpackaged/main/default/objects/sked_Territory__c/fields/sked_Mid_Drive_Productivity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>sked_Mid_Drive_Productivity_Threshold__c</fullName>
    <defaultValue>0.6</defaultValue>
    <label>Mid Drive Productivity Threshold</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>