unpackaged/main/default/objects/sked_Territory__c/recordTypes/sked_District.recordType-meta.xml
<RecordType>
    <fullName>sked_District</fullName>
    <active>true</active>
    <label>District</label>
</RecordType>