unpackaged/main/default/objects/sked_Territory__c/recordTypes/sked_Division.recordType-meta.xml
<RecordType>
    <fullName>sked_Division</fullName>
    <active>true</active>
    <label>Division</label>
</RecordType>