unpackaged/main/default/objects/sked_Territory__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Parent__c</columns>
    <columns>sked_High_Drive_Productivity_Threshold__c</columns>
    <columns>sked_Mid_Drive_Productivity_Threshold__c</columns>
    <columns>sked_Target_Productivity_Metric__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>